# okapi

./: .gitignore  .gitmodules  Dockerfile.template  LICENSE  Makefile  README.md  cmds.sh  coding-conventions.md  copy_fe_client_files.sh  gauges.txt  okapi-bench.csv  okapi.yaml  pom.xml  promql-fn-defs.md  response.json  start-container.sh  start-docker.sh  stop_and_remove_container.sh  test-network.sh
agent-creds/: gateway-token  sources.yaml
benchmark/: benchmark.py  plot.py
build-scripts/: fe_dist_copy.py
dashboard-yamls/: publish-boards.py
deployment-scripts/: ha-deploy.sh  test-deploy.sh
examples/: bulk_ingest.sh  bulk_query.sh  ingest.json  ingest_now.sh  query_minutely.json  query_now.sh  query_secondly.json
helm/: README.md
okapi-agent-dtos/: pom.xml
okapi-agent-main/: pom.xml
okapi-avros/: pom.xml
okapi-cloud-web-dtos/: pom.xml
okapi-constants/: pom.xml
okapi-core/: pom.xml
okapi-cp/: README.md  pyproject.toml
okapi-cp/okapi_cp/: __init__.py  cli.py  utils.py
okapi-cp/okapi_cp/deploy/: __init__.py  k8s.py  local.py
okapi-cp/okapi_cp/tools/: __init__.py  add_license.py
okapi-data/: pom.xml
okapi-data-ddb/: dependency-reduced-pom.xml  pom.xml
okapi-data-sql/: pom.xml
okapi-datagen/: pom.xml
okapi-demo-server/: pom.xml
okapi-ingester/: Dockerfile  NOTES.md  pom.xml
okapi-integ-test/: pom.xml
okapi-logs/: Dockerfile  LOCALTEST.md  pom.xml
okapi-metric-rocks/: pom.xml
okapi-metrics/: Dockerfile  entrypoint.sh  pom.xml
okapi-metrics-proxy/: pom.xml
okapi-ops/: Dockerfile  dependency-reduced-pom.xml  pom.xml
(+2586 files in other folders)
